<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Focus Launcher</string>
    <string name="hide_favorite_app_message">You marked %s as favorite. By hiding, this will be removed from favorites also</string>
    <string name="app_hidden_message">Unhide %s to mark it as favorite</string>
    <string name="ok">OK</string>
    <string name="go_back">Go Back</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="widgets">Widgets</string>
    <string name="clock">Clock</string>
    <string name="lunar_phase">Lunar Phase</string>
    <string name="quotes">Quotes</string>
    <string name="selected_theme">Selected Theme</string>
    <string name="change_theme">Change Theme</string>
    <string name="follow_system">Follow System</string>
    <string name="not_white">Not White</string>
    <string name="said_dark">Said Dark</string>
    <string name="start">Start</string>
    <string name="center">Center</string>
    <string name="end">End</string>
    <string name="clock_position">Clock Position</string>
    <string name="enable_clock_24">Enable Clock 24</string>
    <string name="use_24_hour">Use 24 Hour</string>
    <string name="animation_duration">Animation Duration</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="apps_view_type">Apps View Type</string>
    <string name="show_search_bar">Show Search Bar</string>
    <string name="group_apps_by_character">Group Apps by Character</string>
    <string name="show_app_icons">Show App Icons</string>
    <string name="app_icon_type">App Icon Type</string>
    <string name="text">Text</string>
    <string name="icons">Icons</string>
    <string name="colored">Colored</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="yes_comma_hide">Yes, Hide</string>
    <string name="new_moon">New Moon</string>
    <string name="waxing_crescent">Waxing Crescent</string>
    <string name="first_quarter">First Quarter</string>
    <string name="waxing_gibbous">Waxing Gibbous</string>
    <string name="full_moon">Full Moon</string>
    <string name="waning_gibbous">Waning Gibbous</string>
    <string name="last_quarter">Last Quarter</string>
    <string name="waning_crescent">Waning Crescent</string>
    <string name="next_phase_is_on_date">next %1$s is on %2$s</string>
    <string name="illumination_value">Illumination: %s</string>
    <string name="angle_value">Angle: %s</string>
    <string name="favorites">Favorites</string>
    <string name="remove">Remove</string>
    <string name="reorder">Reorder</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="hide_app">Hide App</string>
    <string name="update_display_name">Update Display Name</string>
    <string name="app_info">App Info</string>
    <string name="uninstall">Uninstall</string>
    <string name="search_app_hint">Search app…</string>
    <string name="upcoming_phases">Upcoming Phases</string>
    <string name="moon">Moon</string>
    <string name="sun">Sun</string>
    <string name="rise">Rise</string>
    <string name="set">Set</string>
    <string name="enable_lunar_phase">Enable Lunar Phase</string>
    <string name="show_illumination_percent">Show Illumination Percent</string>
    <string name="show_upcoming_phase_details">Show Upcoming Phase Details</string>
    <string name="current_place">Current Place</string>
    <string name="enable_lunar_phase_to_preview">Enable Lunar Phase to preview</string>
    <string name="enable_quotes_to_preview">Enable Quotes to preview</string>
    <string name="enable_quotes">Enable Quotes</string>
    <string name="fetch_quotes">Fetch Quotes</string>
    <string name="quotation_icon">Quotation icon</string>
    <string name="about">About</string>
    <string name="app_drawer">App Drawer</string>
    <string name="edit_favorites">Edit Favorites</string>
    <string name="hide_apps">Hide Apps</string>
    <string name="icon_pack">Icon Pack</string>
    <string name="disable_pull_down_notifications">Disable Pull down Notifications</string>
    <string name="enable_pull_down_notifications">Enable Pull down Notifications</string>
    <string name="set_as_default_launcher">Set as Default Launcher</string>
    <string name="settings">Settings</string>
    <string name="hide_status_bar">Hide Status Bar</string>
    <string name="show_status_bar">Show Status Bar</string>
    <string name="app_icon">App Icon</string>
    <string name="credits">Credits</string>
    <string name="phosphor_icons">Phosphor Icons</string>
    <string name="love_icon">Love icon</string>
    <string name="made_with">Made with</string>
    <string name="from_india">from India</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="github_icon">GitHub icon</string>
    <string name="location_icon">Location icon</string>
    <string name="address_icon">Address icon</string>
    <string name="done_icon">Done icon</string>
    <string name="openstreetmap_contributors">© %s contributors</string>
    <string name="openstreetmap">OpenStreetMap</string>
    <string name="update_place">Update Place</string>
    <string name="hidden_apps">Hidden Apps</string>
    <string name="clear_hidden_apps">Clear Hidden Apps</string>
    <string name="clear_favorites">Clear Favorites</string>
    <string name="not_available">Not Available</string>
    <string name="developer">Developer</string>
    <string name="read_favorites">Read Favorites</string>
    <string name="save_favorites">Save Favorites</string>
    <string name="save">Save</string>
    <string name="to_remove_favorite">to remove Favorite</string>
    <string name="this_feature_requires_internet_access">This feature requires internet access</string>
    <string name="privacy">Privacy</string>
    <string name="report_app_crashes">Report app crashes</string>
</resources>